fix(layout):fix a layout bug relating with chrome

--- a/src/assets/style/element-reset.scss
+++ b/src/assets/style/element-reset.scss
@@ -72,6 +72,9 @@
   &__inner:focus {
     box-shadow: 0 0 0 2px rgba(52, 195, 136, 0.2);
   }
+  &--small{
+    font-size: 14px; //fix a bug in Chrome
+  }
 }
 
 /* Form */
